--- a/app/www/solar-radiation-viewer.css
+++ b/app/www/solar-radiation-viewer.css
@@ -19,6 +19,10 @@
   fill: #989898 !important;
 }
 
+.bslib-sidebar-layout.bslib-mb-spacing.html-fill-item {
+  margin-bottom: 0px !important;
+}
+
 .btn {
   background-color: #FFFFFF; 
   border-color: #001C48; 
@@ -120,8 +124,8 @@
 
 .figure-help-text {
   color: #606060;
-  font-size: 0.9rem;
-  font-style: italic;
+  font-size: 0.85rem;
+  font-style: normal;
 }
 
 .form-control:focus {
@@ -134,6 +138,7 @@
   font-size: 1rem;
   font-style: italic;
   font-weight: normal;
+  margin-top: 0px !important;
 }
 
 .modal-body {
@@ -195,6 +200,10 @@
 
 .next:hover {
   background-color: rgb(226, 233, 235) !important;
+}
+
+.page-bottom-text {
+  color: #191919;
 }
 
 .prev:hover {
