--- a/app/www/solar-radiation-viewer.css
+++ b/app/www/solar-radiation-viewer.css
@@ -151,6 +151,13 @@
   padding-top: 0px !important;
 }
 
+.modal-dialog.modal-sm {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .modal-header {
   padding-bottom: 0px !important;
 }
