--- a/app/www/solar-radiation-viewer.css
+++ b/app/www/solar-radiation-viewer.css
@@ -166,6 +166,10 @@
   margin-top: 0px !important;
 }
 
+.modebar-container {
+  top: -8px !important;
+}
+
 .month:hover {
   background-color: rgb(226, 233, 235) !important;
 }
